# fall-detection

./: .env.example  README.md  pyproject.toml  requirements.txt
data/fall_dataset/results/: classification_report.json  journal_hasil_pembahasan.md  metrics.json
models/: labels.json
scripts/: export_model.py  prepare_data.py  run_pose.py  run_pose_multi.py  run_realtime.py
src/: app.py
src/config/: settings.py
src/gui/: main_window.py
src/ml/: dataset.py  evaluate.py  model.py  resource.py  train.py
src/notifications/: email_provider.py  notifier.py  sms_provider.py
src/realtime/: pose_fall.py  pose_fall_multi.py  video_stream.py
src/utils/: preprocessing.py  visualization.py
tests/: test_dataset.py  test_inference.py
